--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   
   <properties>
   <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  <sonar.host.url>http://13.232.36.28:9000/</sonar.host.url>
+  <sonar.host.url>http://65.0.125.52:9000</sonar.host.url>
   <sonar.login>admin</sonar.login>
   <sonar.password>admin</sonar.password>
   </properties>
